--- a/html/sections/about.html
+++ b/html/sections/about.html
@@ -1,197 +1,41 @@
-<div id="titlepage" >
-	<div id="titlepage-text">
-		<h1 
-			
-		>
-		<!-- data-0="padding-top: 0px;"
-			data-200="padding-top: 300px;" -->
-			Department of <br>
-			ophthalmology and <br>
-			visual sciences
-			<span>
-				Annual Report 2015
-			</span>				
-		</h1>
-
-	</div>
-	<div id="titlepage-image" >
-		<div><div
-				data-0="width: 220px; height: 220px; margin: 174px 214px 0 0;"
-				data-200="width: 1100px; height: 1100px; margin: -150px -200px 0 0;"
-			></div></div>
-	</div>
-</div>
-
-<div class="title">
-	<h2>A message from our cheif</h2>
-	<h4>
-		Thank you for taking the time to read The Hospital for Sick Children (SickKids) Department of Ophthalmology and Vision Sciences’ (DOVS) first annual report. We rely on the support of donors, partners, and interested parties like you to continue our mission to promote children’s eye health and treat eye diseases by integrating research, education and clinical care.
-	</h4>
-</div>
 <div class="center">
-	<div class="left left-message">
-		<p>
-			Vision is one of the primary means we have for understanding and appreciating the world. From the feeling we get when we see a loved one’s smile, to the way it helps us complete complex tasks, vision is one of the essential senses that drives human life. The contribution you make to our mission to improve visual outcomes truly changes lives. 
-			<br><br>
-			The DOVS clinical program is one of the largest in the world, with over 20,000 patients seen every year. We are the only centre in Canada that offers comprehensive paediatric ophthalmology services covering all subspecialties, and are Canada’s leading resource for providing complex eye care for children, including advanced surgical interventions. Many of our physicians have formal training in multiple disciplines and are thought leaders in their fields. Our clinical program is also supported by a dedicated and experienced team of allied health-care professionals. 
-		</p>
-		<p class="colapsible hidden">
-			<br>
-			Our research programs are internationally renown, with an excellent track record of productivity. We strive to translate our research to the bedside to provide the highest quality and most innovative care to all our patients. We collaborate closely with other SickKids departments through our research, and also offer opportunities for our students to participate in research development.
-			<br><br>
-			The SickKids DOVS is affiliated with the University of Toronto (U of T) and is actively engaged in training postgraduate medical learners and graduate students. We provide comprehensive training to ophthalmologists that go on to work all over the globe. We have also launched a Global Care and International Ophthalmology initiative that is driving the development of collaborative health-care solutions worldwide.
-			<br><br>
-			In this report, you will learn about our successes and the challenges we face. I hope that it will reaffirm your commitment to our cause and the importance of our mission. Together, we can work to improve outcomes for children and families living with a variety of eye diseases.
-			<br><br>
-			Thank you for your contribution to our mission, no matter what form it takes.
-			<br><br>
-			Sincerely,
-			<br><br>
-			Dr. Agnes Wong
-		</p>
-		<span class="showmore">
-			<a href="#">> read full message</a>
-		</span>
-
-	</div><div class="right right-message">
-		<div class="portrait" style="background-image:url(assets/img/agnus.jpg);">
-		</div>
-		<div class="sub-portrait">
-			Agnes Wong, Ophthalmologist in Chief
-		</div>
-	</div>			
-</div>
-<div class="imagebreak" style="background-image:url(assets/img/eyecheck.jpg)">
-</div>
-
-<div class="title">
-	<h2>Mission Statement</h2>
-	<h4 class="nobottombreaker">
-		We are committed to providing the best and most innovative care to the children we treat, by integrating clinical care with research and education. We are also committed to fostering a multidisciplinary, collaborative, and respectful team environment, so that each team member enjoys opportunities for educational advancement, work satisfaction, and personal growth.
-	</h4>
-</div>
-<div class="goals">
-	<h4>OUR GOALS ARE:</h4>
-	<div>
-		<div>
-			<div class="image"><img src="assets/img/eyeexam.jpg"></div>
-			<div class="text">
-				Promoting children’s eye health and treating eye diseases through excellent clinical care.
-			</div>
-		</div><div>
-			<div class="image"><img src="assets/img/pipecircle.jpg"></div>
-			<div class="text">
-				Creating new scientific and clinical knowledge through rigorous research.
-			</div>
-		</div><div>
-			<div class="image"><img src="assets/img/teaching.jpg"></div>
-			<div class="text">
-				Training future generations of health-care professionals through our world-class educational programs.
-			</div>
+	<div class="contain">
+		<div class="left">
+			<h2>About Benjamin Brott Projects</h2>
+			<p>We believe all of the above are fundamental ingredients to the success of your project. Whether it’s your home or office, it’s where you spend a significant amount of time. It might entertain your closest friends and family, or your biggest clients. Because of this unique relationship people have with their spaces, we take changing it very seriously. We want to make your new space beautiful, functional and in order to satisfy your short term and your long term needs.</p>
+			<p >Get in touch, email <a href="mailto:benjaminbrott@mac.com">benjaminbrott@mac.com</a></p>
+		</div><div class="right">
+			<span class="table">
+				<blockquote>
+					<span class="crossline">
+						Our expert professionals manage each job comprehensively, from preconstruction through to project completion
+					</span>
+				</blockquote>
+			</span>
 		</div>
 	</div>
-</div>
-
-<div class="imagebreak" style="background-image: url(/assets/img/meeting.jpg)"></div>
-<div class="title">
-	<h2>Who we are</h2>
-</div>
-<div class="whoweare center">
-	
-	<div class="left">
-		<table>
-			<tr>
-				<th colspan="1">Ophthalmologist in chief</th><th></th>
-			</tr>
-			<tr>
-				<td>Agnes Wong</td>
-				<td>Neuro-Ophthalmology, Strabismus</td>
-			</tr>
-			
-			<tr>
-				<th colspan="1">Staff Ophthalmologist</th><th></th>
-			</tr>
-			<tr>
-				<td>Asim Ali</td>
-				<td>Anterior Segment, Cornea</td>
-			</tr>
-			<tr>
-				<td>Andrew Budning</td>
-				<td>Retinoblastoma</td>
-			</tr>
-			<tr>
-				<td>Ray Buncic</td>
-				<td>Neuro-Ophthalmology, Craniofacial Anomalies</td>
-			</tr>
-			<tr>
-				<td>Dan DeAngelis</td>
-				<td>Oculoplastics, Orbit</td>
-			</tr>
-			<tr>
-				<td>Brenda Gallie</td>
-				<td>Retinoblastoma</td>
-			</tr>
-			<tr>
-				<td>Elise Heon</td>
-				<td>Ocular Genetics, Retinoblastoma</td>
-			</tr>
-			<tr>
-				<td>Peter Kertes</td>
-				<td>Retina</td>
-			</tr>
-			<tr>
-				<td>Stephen Kraft</td>
-				<td>Strabismus</td>
-			</tr>
-			<tr>
-				<td>Wai-hing Lam</td>
-				<td>Retina</td>
-			</tr>
-			<tr>
-				<td>Kamiar Mireskandari</td>
-				<td>Anterior segment, Cornea, Glaucoma, Strabismus, Retinopathy of Prematurity</td>
-				</tr>
-			<tr>
-				<td>Rajeev Muni</td>
-				<td>Retina</td>
-			</tr>
-			<tr>
-				<td>Nasrin Najm</td>
-				<td>Tehrani Anterior Segment, Uveitis, Strabismus, Retinopathy of Prematurity</td>
-			</tr>
-			<tr>
-				<td>Robert Pashby</td>
-				<td>Oculoplastic</td>
-			</tr>
-			<tr>
-				<td>David Smith</td>
-				<td>Strabismus</td>
-			</tr>
-			<tr>
-				<td>Ajoy Vincent</td>
-				<td>Ocular Genetics, Visual Electrophysiology</td>
-			</tr>
-			<tr>
-				<th colspan="1">Scientist</th><th></th>
-			</tr>
-			
-			<tr>
-				<td>Carol Westall</td>
-				<td>Visual Electrophysiology</td>
-			</tr>
-
-		</table>
-	</div><div class="right">
-		<div class="portrait" style="background-image:url(assets/img/agnus.jpg);">
-		</div>
-		<div class="sub-portrait">
-			Agnes Wong, Ophthalmologist in Chief
-		</div>
+	<div id="corevalues">
+		<h2 class="black middle">Our Core Values Are Simple</h2>
+		<ul>
+			<li>
+				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="text">100% Transparency</span>
+			</li><li>
+				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="text">Comprehensive Design</span>
+			</li><li>
+				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="text">Premium Quality</span>
+			</li><li>
+				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="text">Strict Attention to Detail</span>
+			</li><li>
+				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="text">Excellent Communication</span>
+			</li><li>
+				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="text">Saftey</span>
+			</li>
+		</ul>
 	</div>
-</div>
-<div class="quote">
-	<h4>
-		“It is a privilege to be a member of this talented and supportive group of practitioners and scientists, whose dedication to improving eye care for children will continue to make an impact in Canada and abroad.”
-	</h4>
-	<span class="author">&mdash;Dr.Stephen Kraft</span>
 </div>
