--- a/html/nav.html
+++ b/html/nav.html
@@ -1,18 +1,10 @@
-<div id="nav" class="fixed">
-	<div>
-		<nav>
-			<div id="navleft">
-				<h4>Department of Ophthalmology and Vision Sciences</h4>
-				<ul>
-					<li><a href="#about" class="active">about</a></li><li>
-					<a href="#research">reaserch</a></li><li>
-					<a href="#education">education</a></li><li>
-					<a href="#clinical">clinical</a></li><li>
-					<a href="#howtohelp">how to help</a></li>
-				</ul>
-			</div><div id="logo">
-				<img src="/assets/img/logo.png" alt="sickKids ophthalmology logo">
-			</div>
-		</nav>
-	</div>
+<div id="nav" >
+	<nav>
+		<ul>
+			<li><a href="#about" class="active"><h1>Brott Development Group</h1></a></li><li>
+			<a href="#about">about</a></li><li>
+			<a href="#process">process</a></li><li>
+			<a href="#contact">contact</a></li>
+		</ul>
+	</nav>
 </div>
