--- a/html/sections/contact.html
+++ b/html/sections/contact.html
@@ -34,8 +34,13 @@ Spaces are important, let’s build something worth spending time in.
 </h3>
 
 <ul>
-	<li><a href=""><img src="http://placehold.it/50x50"></a></li>
-	<li><a href=""><img src="http://placehold.it/50x50"></a></li>
-	<li><a href=""><img src="http://placehold.it/50x50"></a></li>
-	<li><a href=""><img src="http://placehold.it/50x50"></a></li>
+	<li><a href="">
+		include "../socialmedia/facebook.svg"
+	</a></li><li><a href="">
+		include "../socialmedia/instagram.svg"
+	</a></li><li><a href="">
+		include "../socialmedia/pintrest.svg"
+	</a></li><li><a href="">
+		include "../socialmedia/houzz.svg"
+	</a></li>
 </ul>
