--- a/html/sections/index.html
+++ b/html/sections/index.html
@@ -1,5 +1,5 @@
-<div class="table">
+<div class="table" style="background-image:url(/assets/img/01_home-large.jpg)">
 	<div>
-		<h1><span data-0="opacity:1;" data-600="opacity:0;">Welcome Home.</span></h1>
+		<h1><span data-top="opacity:0;" data-center="opacity:1;">Welcome Home.</span></h1>
 	</div>
 </div>
