--- a/html/sections/process.html
+++ b/html/sections/process.html
@@ -1,5 +1,5 @@
-<div class="subsection">
-	<div class="shadded">
+<div class="subsection" style="background-image:url(/assets/img/02_discovery-large.jpg)">
+	<div class="shadded" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 		<div class="contain">
 			<div class="fit">
 				<h2>Discovery</h2>
@@ -10,9 +10,9 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection">
+</div><div class="subsection" style="background-image:url(/assets/img/03_design-large.jpg)">
 	<div class="shadded">
-		<div class="contain">
+		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
 				<h2 class="yellow">Design</h2>
 				<h3>Let’s dive deeper into specifics of your project.</h3>
@@ -22,9 +22,9 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection">
+</div><div class="subsection" style="background-image:url(/assets/img/04_reporting-large.jpg)">
 	<div class="shadded">
-		<div class="contain">
+		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
 				<h2 class="organge">Reporting</h2>
 				<h3>We keep an open line of communication.</h3>
@@ -34,9 +34,9 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection">
-	<div class="shadded">
-		<div class="contain">
+</div><div class="subsection" style="background-image:url(/assets/img/02_discovery-large.jpg)">
+	<div class="shadded" >
+		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
 				<h2>Feasibility</h2>
 				<h3>Time is money. We take both of yours seriously.</h3>
@@ -46,9 +46,9 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection">
+</div><div class="subsection" style="background-image:url(/assets/img/06_constructing-large.jpg)">
 	<div class="shadded">
-		<div class="contain">
+		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
 				<h2 class="yellow">Constructing</h2>
 				<h3>We are there every step of the way.</h3>
@@ -58,9 +58,9 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection">
+</div><div class="subsection" style="background-image:url(/assets/img/07_finishing-large.jpeg)">
 	<div class="shadded">
-		<div class="contain">
+		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
 				<h2 class="organge">Finishing</h2>
 				<h3>The devil is in the details.</h3>
