--- a/html/header.html
+++ b/html/header.html
@@ -7,7 +7,10 @@
 <link rel="stylesheet" type="text/css" href="/assets/style.min.css">
 <!-- <link rel="stylesheet" type="text/css" href="/assets/css/slick-theme.css"> -->
 
-
+<!-- Google Fonts -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,700,300' rel='stylesheet' type='text/css'> -->
+<!-- <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700' rel='stylesheet' type='text/css'> -->
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
 
 <!-- general metas -->
 <meta charset="utf-8">
