--- a/html/sections/about.html
+++ b/html/sections/about.html
@@ -1,7 +1,7 @@
 <div class="center">
 	<div class="contain">
 		<div class="left">
-			<h2>About Benjamin Brott Projects</h2>
+			<h2>About Brott Development Group</h2>
 			<p>We believe all of the above are fundamental ingredients to the success of your project. Whether it’s your home or office, it’s where you spend a significant amount of time. It might entertain your closest friends and family, or your biggest clients. Because of this unique relationship people have with their spaces, we take changing it very seriously. We want to make your new space beautiful, functional and in order to satisfy your short term and your long term needs.</p>
 			<p >Get in touch, email <a href="mailto:benjaminbrott@mac.com">benjaminbrott@mac.com</a></p>
 		</div><div class="right">
@@ -19,22 +19,22 @@
 		<ul>
 			<li>
 				<span class="img"><img src="http://placehold.it/100x100"></span>
-				<span class="text">100% Transparency</span>
+				<span class="text">100%</br>Transparency</span>
 			</li><li>
 				<span class="img"><img src="http://placehold.it/100x100"></span>
-				<span class="text">Comprehensive Design</span>
+				<span class="text">Comprehensive</br>Design</span>
 			</li><li>
 				<span class="img"><img src="http://placehold.it/100x100"></span>
-				<span class="text">Premium Quality</span>
+				<span class="text">Premium</br>Quality</span>
 			</li><li>
 				<span class="img"><img src="http://placehold.it/100x100"></span>
-				<span class="text">Strict Attention to Detail</span>
+				<span class="text">Strict Attention</br>to Detail</span>
 			</li><li>
 				<span class="img"><img src="http://placehold.it/100x100"></span>
-				<span class="text">Excellent Communication</span>
+				<span class="text">Excellent</br>Communication</span>
 			</li><li>
 				<span class="img"><img src="http://placehold.it/100x100"></span>
-				<span class="text">Saftey</span>
+				<span class="text">Safety</span>
 			</li>
 		</ul>
 	</div>
