added a bunch of things

--- a/html/sections/about.html
+++ b/html/sections/about.html
@@ -18,22 +18,34 @@
 		<h2 class="black middle">Our Core Values Are Simple</h2>
 		<ul>
 			<li>
-				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="img">
+					include "../icons/square.svg"
+				</span>
 				<span class="text">100%</br>Transparency</span>
 			</li><li>
-				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="img">
+					include "../icons/idea.svg"
+				</span>
 				<span class="text">Comprehensive</br>Design</span>
 			</li><li>
-				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="img">
+					include "../icons/diamon.svg"
+				</span>
 				<span class="text">Premium</br>Quality</span>
 			</li><li>
-				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="img">
+					include "../icons/search.svg"
+				</span>
 				<span class="text">Strict Attention</br>to Detail</span>
 			</li><li>
-				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="img">
+					include "../icons/talk.svg"
+				</span>
 				<span class="text">Excellent</br>Communication</span>
 			</li><li>
-				<span class="img"><img src="http://placehold.it/100x100"></span>
+				<span class="img">
+					include "../icons/warning.svg"
+				</span>
 				<span class="text">Safety</span>
 			</li>
 		</ul>
