--- a/html/sections/contact.html
+++ b/html/sections/contact.html
@@ -26,21 +26,21 @@
 </div>
 
 <div class="widertext">
-	<p>If you are considering a new space, let’s talk about your vision. <a href="">Call</a> or <a href="">email</a> us!</p>
-	<p>You can also download a PDF of our design/build process which describes each phase in greater detail.</p>
+	<p>If you are considering a new space, let’s talk about your vision. <a href="tel:7783849236">Call</a> or <a href="mailto:benjaminbrott@mac.com">email</a> us!</p>
+	<p>You can also <a href="/" target="_blank">download a PDF</a> of our design/build process which describes each phase in greater detail.</p>
 </div>
 <h3>
 Spaces are important, let’s build something worth spending time in.
 </h3>
 
 <ul>
-	<li><a href="">
+	<li><a href="https://www.facebook.com/ben.brott.7" target="_blank">
 		include "../socialmedia/facebook.svg"
-	</a></li><li><a href="">
+	</a></li><li><a href="" target="_blank">
 		include "../socialmedia/instagram.svg"
-	</a></li><li><a href="">
+	</a></li><li><a href="" target="_blank">
 		include "../socialmedia/pintrest.svg"
-	</a></li><li><a href="">
+	</a></li><li><a href="" target="_blank">
 		include "../socialmedia/houzz.svg"
 	</a></li>
 </ul>
