--- a/html/nav.html
+++ b/html/nav.html
@@ -1,7 +1,10 @@
-<div id="nav" >
-	<nav>
+<div id="nav" class="intro">
+	<div id="hamberger">
+		<a href="#show"><span>+</span></a>
+	</div>
+	<nav id="navcontainer">
 		<ul>
-			<li><a href="#about" class="active"><h1>Brott Development Group</h1></a></li><li>
+			<li><a href="#index" class="active"><h1>Brott Development Group</h1></a></li><li>
 			<a href="#about">about</a></li><li>
 			<a href="#process">process</a></li><li>
 			<a href="#contact">contact</a></li>
