yesss, it is added

--- a/html/sections/index.html
+++ b/html/sections/index.html
@@ -1,4 +1,4 @@
-<div class="table" style="background-image:url(/assets/img/01_home-large.jpg)">
+<div class="table">
 	<div>
 		<h1><span data-top="opacity:0;" data-center="opacity:1;">Welcome Home.</span></h1>
 	</div>
