--- a/html/sections/process.html
+++ b/html/sections/process.html
@@ -1,4 +1,4 @@
-<div class="subsection" style="background-image:url(/assets/img/02_discovery-large.jpg)">
+<div class="subsection" id="process_discovery">
 	<div class="shadded" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 		<div class="contain">
 			<div class="fit">
@@ -10,7 +10,7 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection" style="background-image:url(/assets/img/03_design-large.jpg)">
+</div><div class="subsection" id="process_design">
 	<div class="shadded">
 		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
@@ -22,7 +22,7 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection" style="background-image:url(/assets/img/04_reporting-large.jpg)">
+</div><div class="subsection" id="process_reporting">
 	<div class="shadded">
 		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
@@ -34,7 +34,7 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection" style="background-image:url(/assets/img/05_feasibility-large.jpg)">
+</div><div class="subsection" id="process_feasibility">
 	<div class="shadded" >
 		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection" style="background-image:url(/assets/img/06_constructing-large.jpg)">
+</div><div class="subsection" id="process_constructing">
 	<div class="shadded">
 		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
@@ -58,7 +58,7 @@
 			</div>
 		</div>
 	</div>
-</div><div class="subsection" style="background-image:url(/assets/img/07_finishing-large.jpeg)">
+</div><div class="subsection" id="process_finishing">
 	<div class="shadded">
 		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
