iphone being a jerk

--- a/html/sections/about.html
+++ b/html/sections/about.html
@@ -2,8 +2,8 @@
 	<div class="contain">
 		<div class="left">
 			<h2>About Brott Development Group</h2>
-			<p>We believe all of the above are fundamental ingredients to the success of your project. Whether it’s your home or office, it’s where you spend a significant amount of time. It might entertain your closest friends and family, or your biggest clients. Because of this unique relationship people have with their spaces, we take changing it very seriously. We want to make your new space beautiful, functional and in order to satisfy your short term and your long term needs.</p>
-			<p >Get in touch, email <a href="mailto:benjaminbrott@mac.com">benjaminbrott@mac.com</a></p>
+			<p>We are a project management firm specializing in residential and commercial construction projects. We facilitate the development process from feasibility, to design to construction and finally to finishing strong. We believe in a partnership approach to projects. One that is 100% transparent. We work closely with clients and our stakeholders to make sure their expectations are met every step of the way. Clients include home and business owners. We work hard to ensure our clients and stakeholders enjoy the process from start to finish and beyond</p>
+			<p>Get in touch, email <a href="mailto:benjaminbrott@mac.com">benjaminbrott@mac.com</a></p>
 		</div><div class="right">
 			<span class="table">
 				<blockquote>
@@ -21,27 +21,27 @@
 				<span class="img">
 					include "../icons/square.svg"
 				</span>
-				<span class="text">100%</br>Transparency</span>
+				<span class="text">100%<br>Transparency</span>
 			</li><li>
 				<span class="img">
 					include "../icons/idea.svg"
 				</span>
-				<span class="text">Comprehensive</br>Design</span>
+				<span class="text">Comprehensive<br>Design</span>
 			</li><li>
 				<span class="img">
 					include "../icons/diamon.svg"
 				</span>
-				<span class="text">Premium</br>Quality</span>
+				<span class="text">Premium<br>Quality</span>
 			</li><li>
 				<span class="img">
 					include "../icons/search.svg"
 				</span>
-				<span class="text">Strict Attention</br>to Detail</span>
+				<span class="text">Strict Attention<br>to Detail</span>
 			</li><li>
 				<span class="img">
 					include "../icons/talk.svg"
 				</span>
-				<span class="text">Excellent</br>Communication</span>
+				<span class="text">Excellent<br>Communication</span>
 			</li><li>
 				<span class="img">
 					include "../icons/warning.svg"
