--- a/html/sections/contact.html
+++ b/html/sections/contact.html
@@ -26,8 +26,8 @@
 </div>
 
 <div class="widertext">
-	<p>If you are considering a new space, let’s talk about your vision. <a href="tel:7783849236">Call</a> or <a href="mailto:benjaminbrott@mac.com">email</a> us!</p>
-	<p>You can also <a href="/" target="_blank">download a PDF</a> of our design/build process which describes each phase in greater detail.</p>
+	<p>If you are considering a new space, let’s talk about your vision. <a href="tel:7783849236">Call</a> or <a href="mailto:brottdevelopments@gmail.com">email</a> us!</p>
+	<p>You can also <a href="/assets/Design-Build-Process.pdf" target="_blank">download a PDF</a> of our design/build process which describes each phase in greater detail.</p>
 </div>
 <h3>
 Spaces are important, let’s build something worth spending time in.
