some small touchs to ben brott

--- a/html/sections/about.html
+++ b/html/sections/about.html
@@ -21,32 +21,32 @@
 				<span class="img">
 					include "../icons/square.svg"
 				</span>
-				<span class="text">100%<br>Transparency</span>
+				<p class="text">100%<br>Transparency</p>
 			</li><li>
 				<span class="img">
 					include "../icons/idea.svg"
 				</span>
-				<span class="text">Comprehensive<br>Design</span>
+				<p class="text">Comprehensive<br>Design</p>
 			</li><li>
 				<span class="img">
 					include "../icons/diamon.svg"
 				</span>
-				<span class="text">Premium<br>Quality</span>
+				<p class="text">Premium<br>Quality</p>
 			</li><li>
 				<span class="img">
 					include "../icons/search.svg"
 				</span>
-				<span class="text">Strict Attention<br>to Detail</span>
+				<p class="text">Strict Attention<br>to Detail</p>
 			</li><li>
 				<span class="img">
 					include "../icons/talk.svg"
 				</span>
-				<span class="text">Excellent<br>Communication</span>
+				<p class="text">Excellent<br>Communication</p>
 			</li><li>
 				<span class="img">
 					include "../icons/warning.svg"
 				</span>
-				<span class="text">Safety</span>
+				<p class="text">Safety</p>
 			</li>
 		</ul>
 	</div>
