images and scss

--- a/html/sections/about.html
+++ b/html/sections/about.html
@@ -3,7 +3,7 @@
 		<div class="left">
 			<h2>About Brott Development Group</h2>
 			<p>We are a project management firm specializing in residential and commercial construction projects. We facilitate the development process from feasibility, to design to construction and finally to finishing strong. We believe in a partnership approach to projects. One that is 100% transparent. We work closely with clients and our stakeholders to make sure their expectations are met every step of the way. Clients include home and business owners. We work hard to ensure our clients and stakeholders enjoy the process from start to finish and beyond</p>
-			<p>Get in touch, email <a href="mailto:benjaminbrott@mac.com">benjaminbrott@mac.com</a></p>
+			<p>Get in touch, email <a href="mailto:brottdevelopments@gmail.com">brottdevelopments@gmail.com</a></p>
 		</div><div class="right">
 			<span class="table">
 				<blockquote>
