--- a/html/sections/process.html
+++ b/html/sections/process.html
@@ -38,8 +38,8 @@
 	<div class="shadded">
 		<div class="contain" data-bottom-top="opacity:0.05;" data-center="opacity:1;">
 			<div class="fit">
-				<h2 class="yellow">Constructing</h2>
-				<h3>We are there every step of the way.</h3>
+				<h2 class="yellow">Construction</h2>
+				<h3>We are there every<br>step of the way.</h3>
 				<p>
 					Now we are ready to start construction based on your finalized design, scope of work, schedule and construction budget. We start by securing trades and suppliers up front to guarantee they are committed to your project budget and timeline. We perform quality assurance. We are there every step of the way to manage sub-contractors to ensure they have everything they need to complete their tasks as planned.
 				</p>
