--- a/html/sections/process.html
+++ b/html/sections/process.html
@@ -4,9 +4,7 @@
 			<div class="fit">
 				<h2>Discovery</h2>
 				<h3>A home is your personal space, your zen.</h3>
-				<p>
-					We want to know all of your high level requirements. ie.“We need 3 bedrooms on the upper floor” or “ we want our executive offices to have level requirements that provide us with a starting point. In addition, having a detailed discussion about your budget and schedule are crucial in the development of a realistic project plan.
-				</p>
+				<p>We want to know all of your high level requirements. ie. <i>&ldquo;We need 3 bedrooms on the upper floor&rdquo;</i> or <i>&ldquo;we want our executive offices to have views of the ocean&rdquo;</i> are good examples of high level requirements that provide us with a starting point. In addition, having a detailed discussion about your budget and schedule are crucial in the development of a realistic project plan.</p>
 			</div>
 		</div>
 	</div>
