--- a/html/sections/contact.html
+++ b/html/sections/contact.html
@@ -36,11 +36,11 @@ Spaces are important, let’s build something worth spending time in.
 <ul>
 	<li><!-- <a href="https://www.facebook.com/ben.brott.7" target="_blank">
 		include "../socialmedia/facebook.svg"
-	</a> --></li><li><!-- <a href="" target="_blank">
+	</a> --></li><li><a href="https://instagram.com/brottdevelopmentgroup/" target="_blank">
 		include "../socialmedia/instagram.svg"
-	</a> --></li><li><!-- <a href="" target="_blank">
+	</a></li><li><a href="https://www.pinterest.com/benbrott/" target="_blank">
 		include "../socialmedia/pintrest.svg"
-	</a> --></li><li><!-- <a href="" target="_blank">
+	</a></li><li><!-- <a href="" target="_blank">
 		include "../socialmedia/houzz.svg"
 	</a> --></li>
 </ul>
